# struct2tensor

./: .bazelrc  .gitignore  404.html  BUILD  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  WORKSPACE  bazel-bin  bazel-out  bazel-struct2tensor  bazel-testlogs  build_common.sh  build_pip_package.sh  configure.sh  docker-compose.yml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  setup.py
.github/actions/reusable-build/: action.yml
.github/reusable-build/: action.yml
.github/workflows/: build.yml  cd-docs.yml  test.yml
android_weather_app/app/: build.gradle
android_weather_app/app/src/main/: AndroidManifest.xml
api_docs/python/expression_impl/: index.html
api_docs/python/expression_impl/expression_impl/: index.html
api_docs/python/s2t/: index.html
api_docs/python/s2t/s2t/: index.html
benchmarks/g3doc/: README.md
docs/api_docs/python/s2t/: index.md  s2t.md
docs/examples/: prensor_playground.ipynb
examples/: prensor_playground.ipynb
examples/prensor_playground/: index.html
g3doc/api_docs/python/: _toc.yaml  expression_impl.md  s2t.md
g3doc/api_docs/python/expression_impl/: _api_cache.json  _toc.yaml  all_symbols.md  apply_schema.md  broadcast.md  depth_limit.md  expression_impl.md  filter_expression.md  index.md  map_prensor.md  map_prensor_to_prensor.md  map_values.md  parquet.md  placeholder.md  project.md  promote.md  promote_and_broadcast.md  proto.md  reroot.md  size.md  slice_expression.md
g3doc/api_docs/python/expression_impl/apply_schema/: apply_schema.md
g3doc/api_docs/python/expression_impl/broadcast/: broadcast.md  broadcast_anonymous.md
g3doc/api_docs/python/expression_impl/deprecated/: _toc.yaml  broadcast.md  depth_limit.md  index.md  map_prensor_to_prensor.md  map_values.md  parquet.md  placeholder.md  project.md  reroot.md  size.md
g3doc/api_docs/python/expression_impl/depth_limit/: limit_depth.md
g3doc/api_docs/python/expression_impl/filter_expression/: filter_by_child.md  filter_by_sibling.md
g3doc/api_docs/python/expression_impl/size/: has.md  (+3 more)
g3doc/api_docs/python/s2t/: ChildNodeTensor.md  Expression.md  LeafNodeTensor.md  NodeTensor.md  Path.md  Prensor.md  RootNodeTensor.md  Step.md  _api_cache.json  _toc.yaml  all_symbols.md  calculate_prensors.md  calculate_prensors_with_graph.md  calculate_prensors_with_source_paths.md  create_expression_from_file_descriptor_set.md  create_expression_from_prensor.md  create_expression_from_proto.md  create_path.md  create_prensor_from_descendant_nodes.md  create_prensor_from_root_and_children.md  get_default_options.md  get_options_with_minimal_checks.md  get_ragged_tensor.md  get_ragged_tensors.md  get_sparse_tensor.md  get_sparse_tensors.md  index.md  s2t.md
g3doc/examples/: prensor_playground.ipynb
g3doc/stylesheets/: extra.css
search/: search_index.json
struct2tensor/: BUILD  __init__.py  calculate.py  calculate_options.py  calculate_test.py  calculate_with_source_paths.py  calculate_with_source_paths_test.py  create_expression.py  create_expression_test.py  expression.py  expression_add.py  expression_add_test.py  expression_test.py  path.py  path_test.py  prensor.py  prensor_test.py  prensor_to_structured_tensor.py  prensor_to_structured_tensor_test.py  prensor_util.py  prensor_util_test.py  prensor_value.py  prensor_value_test.py  struct2tensor.bzl  struct2tensor_module_test.py  structured_tensor_to_prensor.py  structured_tensor_to_prensor_test.py  tf_types.py  version.py  workspace.bzl
struct2tensor/benchmarks/: BUILD  benchmark.proto  ops_benchmark.py  serialization_benchmark.cc  struct2tensor_benchmark.py  struct2tensor_benchmark_util.py
struct2tensor/benchmarks/g3doc/: README.md
struct2tensor/benchmarks/testdata/: BUILD
struct2tensor/expression_impl/: __init__.py  apply_schema.py  apply_schema_test.py  broadcast.py  broadcast_test.py  depth_limit.py  depth_limit_test.py  filter_expression.py  filter_expression_test.py  index.py  index_test.py  map_prensor.py  map_prensor_test.py  map_prensor_to_prensor.py  map_prensor_to_prensor_test.py  map_values.py  map_values_test.py  parquet.py  parquet_test.py  parse_message_level_ex.py  parse_message_level_ex_test.py  placeholder.py  placeholder_test.py  project.py  project_test.py  promote.py  promote_and_broadcast.py  promote_and_broadcast_test.py  promote_test.py  proto.py  proto_test.py  proto_test_util.py  raw_parquet_dataset_test.py  reroot.py  reroot_test.py  size.py  size_test.py  slice_expression.py  slice_expression_test.py
struct2tensor/kernels/: BUILD  decode_proto_map_op.cc  decode_proto_sparse_op.cc  equi_join_any_indices_op.cc  equi_join_indices_op.cc  run_length_before_op.cc  streaming_proto_reader.cc  streaming_proto_reader.h  vector_to_tensor.h
struct2tensor/kernels/parquet/: BUILD  parent_indices_builder.cc  parent_indices_builder.h  parquet_dataset_kernel.cc  parquet_reader.cc  parquet_reader.h  parquet_reader_util.cc  parquet_reader_util.h
struct2tensor/ops/: BUILD  decode_proto_map_op.cc  decode_proto_sparse_op.cc  equi_join_any_indices_op.cc  equi_join_indices_op.cc  file_descriptor_set.py  file_descriptor_set_test.py  gen_decode_proto_map_op.py  gen_decode_proto_sparse.py  gen_equi_join_any_indices.py  gen_equi_join_indices.py  gen_parquet_dataset.py  gen_run_length_before.py  op_kernel_registration_test.cc  parquet_dataset_op.cc  run_length_before_op.cc  struct2tensor_ops.py  struct2tensor_ops_test.py
struct2tensor/proto/: BUILD  query_metadata.proto
struct2tensor/test/: BUILD  any.proto  dependent_test.proto  expression_test_util.py  prensor_test_util.py  test.proto  test_any.proto  test_extension.proto  test_map.proto  test_proto3.proto
struct2tensor/testdata/parquet_testdata/: BUILD  all_data_types.parquet  dremel_example.parquet  dremel_example_two_row_groups.parquet
struct2tensor/tools/: BUILD  build_docs.py  patch_wrapped_clang.sh
struct2tensor/tools/docker_build/: Dockerfile.manylinux2010  Dockerfile.manylinux2014  build_manylinux.sh
struct2tensor/tools/tf_serving_docker/: Dockerfile
tf/: BUILD.tpl  tf_configure.bzl
(+63 files in other folders)
